code/RealPNN/Segmentations/logs/Error_NeuN_seg.txt
Traceback (most recent call last):
  File "/dcs04/lieber/marmaypag/spatialDLPFC_SCZ_LIBD4100/code/RealPNN/Segmentations/Code/NeuN.py", line 44, in <module>
    img_neun, neun_shifted, neun_gray, neun_thresh = read_img.read_and_preprocess(img_D1, 3)
NameError: name 'read_img' is not defined
Traceback (most recent call last):
  File "/dcs04/lieber/marmaypag/spatialDLPFC_SCZ_LIBD4100/code/RealPNN/Segmentations/Code/NeuN.py", line 44, in <module>
    img_neun, neun_shifted, neun_gray, neun_thresh = read_img.read_and_preprocess(img_D1, 3)
NameError: name 'read_img' is not defined
Traceback (most recent call last):
  File "/dcs04/lieber/marmaypag/spatialDLPFC_SCZ_LIBD4100/code/RealPNN/Segmentations/Code/NeuN.py", line 44, in <module>
    img_neun, neun_shifted, neun_gray, neun_thresh = read_img.read_and_preprocess(img_D1, 3)
NameError: name 'read_img' is not defined
Traceback (most recent call last):
  File "/dcs04/lieber/marmaypag/spatialDLPFC_SCZ_LIBD4100/code/RealPNN/Segmentations/Code/NeuN.py", line 47, in <module>
    img_neun, neun_shifted, neun_gray, neun_thresh = read_img.read_and_preprocess(img_D1, 3)
NameError: name 'img_D1' is not defined
Traceback (most recent call last):
  File "/dcs04/lieber/marmaypag/spatialDLPFC_SCZ_LIBD4100/code/RealPNN/Segmentations/Code/NeuN.py", line 43, in <module>
    from stitched_functions import read_img, watershed_segmentation, save_coordinates
  File "/dcs04/lieber/marmaypag/spatialDLPFC_SCZ_LIBD4100/code/RealPNN/Segmentations/Code/stitched_functions/read_img.py", line 101
    Image.MAX_IMAGE_PIXELS = None
    ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "/dcs04/lieber/marmaypag/spatialDLPFC_SCZ_LIBD4100/code/RealPNN/Segmentations/Code/NeuN.py", line 90, in <module>
    nnx, nny, nnw, nnh, nn_area, neun_segmented = draw_all_contours(neun_c, neun_contours, (0,255,0), 2)
NameError: name 'draw_all_contours' is not defined
Traceback (most recent call last):
  File "/dcs04/lieber/marmaypag/spatialDLPFC_SCZ_LIBD4100/code/RealPNN/Segmentations/Code/NeuN.py", line 91, in <module>
    neun_df = save_coordinates.create_df(nnx, nny, nnw, nnh, nn_area, neun_img, 'NeuN')
  File "/dcs04/lieber/marmaypag/spatialDLPFC_SCZ_LIBD4100/code/RealPNN/Segmentations/Code/stitched_functions/save_coordinates.py", line 49, in create_df
    file_name = os.path.basename(img_name) # image file name
  File "/users/ukaipa/.conda/envs/venv_segmentations/lib/python3.9/posixpath.py", line 142, in basename
    p = os.fspath(p)
TypeError: expected str, bytes or os.PathLike object, not TiffImageFile
